--- a/index.html
+++ b/index.html
@@ -35,7 +35,23 @@
 
     </header>
 
-    <main></main>
+    <main>
+        <section id="team">
+            <div class="team-container">
+                <div class="team-img">
+                    <img src="./images/team1.jpg" alt="">
+                    <img src="./images/team2.jpg" alt="">
+                    <img src="./images/team3.jpg" alt="">
+                    <img src="./images/team4.jpg" alt="">
+                </div>
+                <div class="team-text">
+                    <h1 class="section-heading"><span class="Quick-list">Quick list</span> of Our <span class="Features">Features</span></h1>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="button-primary">Explore More</button>
+                </div>
+            </div>            
+        </section>
+    </main>
 
     <footer></footer>
 </body>
